--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^6.5.1",
     "leaflet": "^1.8.0",
     "leaflet-defaulticon-compatibility": "^0.1.1",
+    "leaflet-easybutton": "^2.4.0",
     "leaflet-geosearch": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
