--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "autoprefixer": "10.4.5",
     "font-awesome": "^4.7.0",
     "framer-motion": "^6.5.1",
     "leaflet": "^1.8.0",
@@ -18,6 +19,9 @@
     "react-icons": "^3.11.0",
     "react-leaflet": "^4.0.2",
     "react-scripts": "5.0.1"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
